--- a/static/uploads/resume.tex
+++ b/static/uploads/resume.tex
@@ -44,7 +44,7 @@
 \mobile{+55 48 98821 4666}
 \email{paulovictordafonseca@gmail.com}
 \dateofbirth{January 13th, 1989}
-\homepage{sites.google.com/view/paulovfonseca} 
+\homepage{pvfonseca.github.io} 
 \github{github.com/pvfonseca}
 \linkedin{linkedin.com/in/paulo-victor-da-fonseca}
 % \gitlab{gitlab-id}
