updates cd and work info

--- a/static/uploads/cv/experience.tex
+++ b/static/uploads/cv/experience.tex
@@ -11,10 +11,25 @@
 
 %---------------------------------------------------------
   \cventry
+    {Adjunct Professor - Department of Economic Sciences} % Job title
+    {Santa Catarina State University} % Organisation
+    {Florianópolis, Brazil} % Location
+    {Mar 2023 - Present} % Date(s)    
+    {
+     \begin{cvitems} % Description(s) of tasks/responsibilities    
+        \item {Macroeconomic Theory I}
+        \item {Microeconomic Theory I}        
+        \item {Quantitative Methods in Economics I}
+        \item {Applied Mathematics}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Lecturer in Economics} % Job title
     {Santa Catarina State University} % Organisation
     {Florianópolis, Brazil} % Location
-    {Aug 2021 - Present} % Date(s)    
+    {Aug 2021 - Mar 2023} % Date(s)    
     {
      \begin{cvitems} % Description(s) of tasks/responsibilities    
         \item {Macroeconomic Theory I}
