--- a/static/uploads/resume.tex
+++ b/static/uploads/resume.tex
@@ -85,6 +85,7 @@
 \input{cv/education.tex}
 \input{cv/experience.tex}
 \input{cv/projects.tex}
+\newpage
 \input{cv/skills.tex}
 \input{cv/achievements.tex}
 \input{cv/interests.tex}
